Move the process_deferred_messages idle cb when switching main contexts

If at-spi2-atk enters a new main context and calls
atspi_set_main_context and process_deferred_messages has already been
scheduled for the original context, then it would not be called until
the original main loop is re-entered, meaning that Orca will sometimes
deadlock in its preferences dialog, since its key listener won't get the
notification for its own key event, as it will be deferred, while
at-spi2-atk waits for the listener to be processed.

https://bugzilla.gnome.org/show_bug.cgi?id=707218